# langgraph-to-maf

./: .gitignore  ARCHITECTURE.md  CONVERSION_FLOW.md  ENGINEERING_GUIDE.md  README.md  pyproject.toml  requirements.txt
backend/: README.md  api.py  service.py
backend/converter/: __init__.py  config.py  contracts.py  main.py  verify.py
backend/converter/adapters/: __init__.py  base.py
backend/converter/engine/: __init__.py  capability_negotiation.py  conversion_engine.py  tier1_rules.py  tier2_readme.py  tier3_llm.py
backend/converter/extractor/: __init__.py  component_extractor.py
backend/converter/frameworks/: README.md
backend/converter/generator/: __init__.py  body_porter.py  code_generator.py  docs_generator.py  llm_refinement.py  readiness_report.py  readme_generator.py  report_generator.py
backend/converter/ir/: __init__.py  ir_builder.py  validator.py
backend/converter/parser/: __init__.py  code_parser.py  readme_parser.py
backend/converter/pipeline/: __init__.py  base.py  hybrid_pipeline.py
backend/converter/scanner/: __init__.py  repo_scanner.py
backend/converter/templates/: README.md  agent_context.py.jinja  orchestrator.py.jinja  plugin_class.py.jinja  readme_maf.md.jinja
backend/converter/tests/: conftest.py  test_all_frameworks_matrix.py  test_aws_strands_adapter.py  test_body_porter.py  (+23 more)
docs/: ENGINEERING_GUIDE.md  FRAMEWORK_AUTHORING.md  FRAMEWORK_REFERENCE.md
examples/sample_agent/: README.md  agent.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
(+70 files in other folders)
